Manager page (Claims not done + Approve, Deny button not done) + Minor PolicyHolder page fix